app/src/components/Navbar/style.css
.bar {
	height: 65px;
	margin-bottom: 10px;
}

title {
	font-size: 100px;
}

h1{
	font-family: 'Alegreya SC', serif;
	font-size: 20px;
	text-align:center;

	/*background: -webkit-linear-gradient(top, #2c539e 0%,#2c539e 100%);*/

}

div.bar{
	 -background: -webkit-linear-gradient(top, #2c539e 0%,#2c539e 100%);
}

li{
	font-family: 'Alegreya SC', serif;
	font-size: 20px;
	text-align:inline-block;
}

#nav-title{
	font-size:40px;
	position:relative;
	left: 390px;
}

